src/static/blog.css
/* -*- css-indent-offset: 2 -*- */
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/
*, *::before, *::after {
  box-sizing: border-box;
}
* {
  margin: 0;
  line-height: calc(1em + 0.5rem);
}
html, body {
  height: 100%;
}
body {
  -webkit-font-smoothing: antialiased;
}
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
input, button, textarea, select {
  font: inherit;
}
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}


/* Styles */

body {
  margin: auto;
  max-width: 50rem;
  padding: 0 15px 15px;
  font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
  font-size: 1.1rem;
  color: #333;
}

h1, h2, h3, h4 {
  margin: 1.414rem 0 .5rem;
}

small {
  font-size: 0.8em;
}

a, a:visited {
  color: #1183d0;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}

p, blockquote, table, hr, dl, ul, ol, pre, address, figure {
  margin-bottom: 1rem;
}

pre, code, .mono {
  font-family: Menlo, Monaco, Consolas, "Liberation Mono", monospace;
}

pre, code {
  font-size: 0.8rem;
}

pre {
  padding: .5rem;
  overflow-x: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}

img, canvas, iframe, video, svg, select, textarea {
  max-width: 100%;
}

blockquote {
  border-left: 8px solid #dcdcdc;
  padding: 1rem;
}

footer {
  margin-top: 2rem;
  text-align: center;
}

.tabs {
  white-space: nowrap;
  overflow-x: auto;
}

.tabs > h1 {
  display: inline-block;
  font-size: 1.5rem;
  margin-right: 0.5rem;
}

/* Custom styles */

body > header {
  max-width: 50rem;
  margin: 0.5rem auto 1.5rem;
  display: flex;
  justify-content: space-between;
}

#title {
  margin: 0;
  font-weight: bold;
  font-size: 1.5rem;
  background: #333;
}

#title a {
  color: white;
  padding: 0.3rem;
}

#title a:hover {
  text-decoration: none;
}

.top-icons {
  margin: 0;
  display: inline-flex;
  gap: 0.5rem;
}

.icon   { display: inline; position: relative; width: 1rem; height: 1rem; top: 0.125rem; }
.icon15 { display: inline; position: relative; width: 1.5rem; height: 1.5rem; top: 0.1875rem; }
.icon2  { display: inline; position: relative; width: 2rem; height: 2rem; top: 0.25rem; }

.lead {
  font-size: 1.5rem;
  font-weight: 200;
}

h1 a {
  color: #333;
}

h1 a:hover {
  text-decoration: none;
}

.hover-target { display: none; user-select: none; }
.hover-target::before { content: " "; }
h1:hover .hover-target, h2:hover .hover-target, h3:hover .hover-target { display: inline; }


#post img, #post iframe {
  margin: 0 auto;
}

@media (min-width: 640px) {
  #post img, #post iframe {
    margin-left: 1rem;
    float: right;
    max-width: 400px;
    max-height: 300px;
  }
}

article > header {
  padding-bottom: 1rem;
}

article > header > h1 {
  margin-bottom: 0;
}

/* cover */

header.cover {
  position: relative;
  left: -15px; /* body padding */
  width: 100vw;
  max-width: 100vw;
  height: 50vh;
  max-height: 50vh;

  background-size: cover;
  background-position: center;

  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

header.cover > * {
  padding-left: 15px;
}

@media (min-width: 50rem) {
  header.cover {
    left: calc((-100vw + 50rem) / 2 - 15px);
  }
  header.cover > * {
    padding-left: calc((100vw - 50rem) / 2 + 15px);
  }
}

header.cover, header.cover .grey, header.cover a {
  color: white;
  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}

/* Utility */

.mt { margin-top: 1rem; }
.mt15 { margin-top: 1.5rem; }
.mb { margin-bottom: 1rem; }
.mb5 { margin-bottom: .5rem; }
.mb2 { margin-bottom: 2rem; }
.ml { margin-left: 1rem; }
.mr { margin-right: 1rem; }

.mt0 { margin-top: 0; }
.mb0 { margin-bottom: 0; }
.ml0 { margin-left: 0; }
.mr0 { margin-right: 0; }

.left { text-align: left; }
.center { text-align: center; }
.right { text-align: right; }
.mcenter { margin: 0 auto; display: block; }

.small { font-size: 0.8em; }

.red { color: red; }
.blue { color: blue; }
.grey { color: grey; }


.nobullets li {
  list-style-type: none;
}

@media (min-width: 640px) {
  .float-left { float: left; }
  .float-right { float: right; }
}
.clear { clear: both; }
.clearfix::after {
  content: " ";
  display: block;
  height: 0;
  clear: both;
}


.opacity-75 { opacity: 0.75; }
.group:hover .opacity-75 {
  opacity: 1;
  transition: opacity 0.2s;
}

/* editor.js comments */

.permsel {
  background-color: rgba(20, 50, 120, 0.2);
  position: absolute;
}

.permsel:hover .tooltip {
  display: block;
}

.tooltip {
  display: none;
  width: 300px;
  background: #222;
  border-radius: 10px;
  color: #f5f5f5;
  padding: 10px 15px;
  position: relative;
  text-align: left;
  z-index: 10;
  left: 50%;
  transform: translate(-50%, calc(-100% - 15px));
}

.tooltip b {
  color: white;
}

.tooltip::after {
  content: '';
  position: absolute;
  display: block;
  top: 100%;
  left: 50%;
  width: 0;
  height: 0;
  border-width: 15px;
  border-style: solid;
  border-color: #222 transparent transparent transparent;
}

